# VoiceScript

./: .gitignore  NOTICE.md  README.md  VoiceScript.spec  pyproject.toml
docs/: MODELS.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  SETUP.md
scripts/: build-windows.ps1  check-environment.ps1
tests/: test_audio_probe.py  test_audio_tools.py  test_backend_contracts.py  test_cli.py  test_cli_mock_transcription.py  test_desktop_upload.py  test_environment.py  test_export_formats.py  test_exporters.py  test_history_store.py  test_model_cache.py  test_pyinstaller_assets.py  test_qwen_compat.py  test_qwen_profiles.py  test_runtime_environment.py  test_settings.py  test_theme.py  test_transcript_schema.py  test_ui_theme.py  test_whisper_long_audio.py
voicescript/: __init__.py  build_support.py  cli.py  environment.py  history.py  models.py  runtime.py  settings.py
voicescript/asr/: __init__.py  base.py  mock.py  qwen.py
voicescript/audio/: __init__.py  probe.py
voicescript/backends/: __init__.py  base.py  qwen_backend.py  whisper_backend.py
voicescript/core/: __init__.py  audio.py  environment.py  exporters.py  model_cache.py  runtime.py  settings.py  transcript.py
voicescript/desktop/: __init__.py  app.py  theme.py  worker.py
voicescript/export/: __init__.py  formats.py
voicescript/ui/: __init__.py  __main__.py  app.py  icons.py  theme.py  widgets.py  (+1 more)
(+9 files in other folders)
