[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicescript"
version = "0.1.0"
description = "VoiceScript / Shengjianlu Windows desktop ASR transcription tool"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Icdafy" }]
dependencies = [
  "PySide6>=6.7",
  "openai-whisper @ git+https://github.com/openai/whisper.git@v20250625",
  "torch",
  "qwen-asr==0.0.6",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.11",
]

[project.scripts]
voicescript = "voicescript.cli:main"
voicescript-desktop = "voicescript.desktop.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voicescript*"]
