[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicescript"
version = "0.2.4"
description = "VoiceScript 声笺录 Windows desktop ASR transcription app"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Icdafy" }]
dependencies = [
  "PySide6>=6.7",
  "qwen-asr==0.0.6",
  "torch",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
  "pyinstaller>=6.11",
]

[project.scripts]
voicescript = "voicescript.cli:main"
voicescript-desktop = "voicescript.ui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voicescript*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
